--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +8,21 @@
 </head>
 <body>
         <header class="header">
-            <div class="header-bottom">
+            <section class="header-top">
+                <a class="header-top__learning" href="#">Learning</a>
+                <nav class="nav">
+                    <li class="nav__item"><a href="#">Home</a></li>
+                    <li class="nav__item"><a href="#">About Us</a></li>
+                    <li class="nav__item"><a href="#">Services</a></li>
+                    <li class="nav__item"><a href="#">Courses</a></li>
+                    <li class="nav__item"><a href="#">Blog</a></li>
+                    <li class="nav__item"><a href="#">Register</a></li>
+                </nav>
+            </section>
 
-            </div>
-            <div class="header-top">
+            <section class="header-bottom">
                 
-            </div>
+            </section>
         </header>
 </body>
 </html>
